--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,44 @@ header{
   margin: 0 auto;
   width: 1200px;
 }
+#logo{
+  float: left; 
+  width: 250px;
+  height: 100px;
+  background-color: indigo;
+} 
+nav{  
+  width: 900px;
+  height: 100px;
+  float: right;
+  background-color: green;
+
+}
+#slideShow{
+  clear: both;
+  width: 100%;
+  height: 300px;
+  background-color: orange;
+  overflow: hidden;   
+}
+#contents{
+  width: 100%;
+  height: 300px;
+}
+#tabMenu{
+  float: left;
+  width: 600px;
+  height: 100%;
+  background-color: violet;
+}
+#links{
+  float: right;
+  width: 600px;
+  height: 100%;
+  background-color: skyblue;
+}
+footer{
+  width: 100%;
+  height: 100px;
+  background-color: gray;
+}
