--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+a{
+  text-decoration: none;
+}
 header{
   width: 100%;
   height: 100px;
-  background-color: blue;
+  background-color: rgb(191, 191, 247);
 }
 #container{
   margin: 0 auto;
@@ -16,8 +21,15 @@ header{
   float: left; 
   width: 250px;
   height: 100px;
-  background-color: indigo;
 } 
+#logo h1{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+  font-weight: 700;
+  font-size: 40px; 
+  color: #fff;
+  text-shadow: 0 -1px 0 #222;
+
+}
 nav{  
   width: 900px;
   height: 100px;
